# RoboPoint

./: .gitignore  pyproject.toml
bringup/: checkpoints.sh  datasets.sh  run.sh  setup.sh
robopoint/model/: builder.py
