[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robopoint"
version = "0.1.0"
description = "RoboPoint: a Vision-Language Model for Spatial Affordance Prediction for Robotics"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.0", "torchvision==0.17.0",
    "transformers==4.43.1", "tokenizers==0.19.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.33.0", "peft", "protobuf", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy<2", "scikit-learn",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx", "uvicorn", "fastapi",
    "einops", "einops-exts", "timm", "draccus",
    "tensorflow", "tensorflow_datasets", "tensorflow_graphics",
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb"]
eval = ["lmms-eval"]

[project.urls]
"Homepage" = "https://robo-point.github.io"
"Bug Tracker" = "https://github.com/wentaoyuan/robopoint/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[[tool.uv.index]]
name = "pypi"
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu121"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
